update financeReportService